# zoomy-jax

./: .gitignore  README.md  pyproject.toml
tests/: cases.py  conftest.py  models.py  refs.py  test_chorin_algebraic_aux_jax.py  test_dt_max_wave_free_jax_req190.py  test_elliptic_bc_jax_req174.py  test_stage_list_jax_req173.py  test_swe_2d_jax.py  test_swe_dambreak_jax.py  test_time_position_operators_jax_req185.py  test_uniform_rank_malpasset_req84.py  test_userfunctions_jax.py
tests/fvm/: test_explicit_diffusion_jax.py  test_implicit_diffusion_dense_jax.py  test_periodic_bc_jax.py
tests/goldens/: README.md  candidate_baselines.json
tests/refs/: ahs26.npz  ahs26_small.npz  bc_inflow.npz  bc_periodic.npz  bc_wall.npz  boundary_o2_small.npz  boundary_order2.npz  parity.npz  ritter_dry.npz  ritter_dry_o2_small.npz  stoker_wet.npz  stoker_wet_o2_small.npz  swashes_ritter_dry_o1.npz  swashes_ritter_dry_o2.npz  swashes_stoker_wet_o1.npz  swashes_stoker_wet_o2.npz  swe_2d.npz  timings.json  vam_bump_curves.npz  vam_chorin.npz  vam_first_order.npz  vam_first_order_small.npz  vam_smooth_small.npz  wb_lake.npz  wb_long.npz
tests/regression/: test_ahs26_multilayer.py  test_ahs26_multilayer_jax.py  test_boundary_order2.py  test_swashes_convergence.py  test_swashes_smooth_order2.py  test_swe_march_regression_jax.py  test_vam_bump_curves.py  test_vam_bump_experiment.py  test_vam_bump_regression_jax.py  test_vam_first_order.py  test_vam_order2.py  test_wb_long_march.py  test_wb_long_march_jax.py
tests/runtime/: test_ahs26_small.py  test_bc_runtime.py  test_bc_runtime_jax.py  test_dt_and_operators_jax.py  test_parallel_two_devices.py  test_parity_numpy_jax.py  test_parity_numpy_vs_jax.py  test_solver2_swashes.py  test_swe_2d.py  test_swe_marches_jax.py  test_swe_ritter_dry.py  test_swe_stoker_wet.py  test_vam_chorin_bump.py  test_vam_chorin_small_jax.py  test_wb_lake_at_rest.py  test_wetdry_positivity_jax.py
tests/spmd/: test_halo_exchange.py  test_partition_jax.py  test_spmd_advection.py  test_spmd_lsq_muscl.py  test_spmd_real_solver.py  test_spmd_sme0.py  test_spmd_solver_integration.py
zoomy_jax/: README.md  __init__.py
zoomy_jax/fvm/: __init__.py  flux.py  halo_exchange.py  halo_exchange_jax.py  jvp_jax.py  march_emitted.py  nonconservative_flux.py  ode.py  precice_solver.py  reconstruction_jax.py  solver_chorin_vam_jax.py  solver_imex_jax.py  solver_jax.py  spmd_jax.py  userfunctions.py
zoomy_jax/gnn_blueprint/: README.md  __init__.py  benchmark_adaptive_precond.py  benchmark_gmres_guess.py  benchmark_imex_child_solver.py  benchmark_imex_sweep.py  benchmark_message_steps.py  benchmark_poisson_iterations.py  benchmark_spectral_mesh_suite.py  benchmark_warm_runtime.py  cases_gn_topo.py  common.py  customize_from_collect.py  dataset_2d_mg_multibranch.py  dataset_deltaq.py  demo_fft_gnn_1d.py  demo_local_experts_transient.py  demo_local_gnn.py  demo_local_gnn_timeseries.py  eval_pressure_capture.py  eval_standalone_predictor.py  fourier_1d.py  global_coupling.py  graph_laplacian_spectral.py  graph_mp_multibranch.py  imex_child_solver.py  imex_scipy_gmres_solver.py  mesh_1d_poisson.py  mesh_2d_poisson.py  mesh_spectral_geometry.py  mg_structured_hierarchy.py  mg_structured_hierarchy_1d.py  models_deltaq.py  multigrid_gnn_toy.py  (+19 more)
(+13 files in other folders)
