[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "zoomy_jax"
version = "0.1.0"
description = "JAX solver backend for the Zoomy simulation framework."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GNU" }
authors = [
  { name = "Ingo Steldermann", email = "steldermann@mbd.rwth-aachen.de" }
]
keywords = ["jax", "simulation", "zoomy", "shallow flow", "physics", "autodiff"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]


dependencies = [
  # JAX ecosystem
  "jax>=0.7.0",

  # depends on zoomy_core (local or PyPI)
  "zoomy_core>=0.1.14",

  # server included by default (JAX is heavy anyway)
  "zoomy-server",
]

[project.scripts]
zoomy-serve-jax = "zoomy_server.cli:main"

[project.urls]
Homepage = "https://github.com/mbd-rwth/Zoomy"
Source = "https://github.com/mbd-rwth/Zoomy"
Issues = "https://github.com/mbd-rwth/Zoomy/issues"


[tool.setuptools.packages.find]
include = ["zoomy_jax*"]
