[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "zoomy_jax"
version = "0.1.0"
description = "JAX solver backend for the Zoomy simulation framework."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LGPL-3.0-or-later" }
authors = [
  { name = "Ingo Steldermann", email = "steldermann@mbd.rwth-aachen.de" }
]
keywords = ["jax", "simulation", "zoomy", "shallow flow", "physics", "autodiff"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: OS Independent",
]


dependencies = [
  # JAX ecosystem
  "jax>=0.7.0",

  # depends on zoomy_core (local or PyPI)
  "zoomy_core>=0.1.14",
]

[project.optional-dependencies]
server = ["zoomy-server"]

[project.urls]
Homepage = "https://github.com/mbd-rwth/Zoomy"
Source = "https://github.com/mbd-rwth/Zoomy"
Issues = "https://github.com/mbd-rwth/Zoomy/issues"


[tool.setuptools.packages.find]
include = ["zoomy_jax*"]

# Standalone runs (rootdir = zoomy_jax, where the superrepo pytest.ini and
# root conftest are invisible).  Marker names follow the SUPERREPO
# conventions (small/medium/large/regression + the jax stack tag) — never
# zoomy_core's pyproject-local gate/rederive/area names, which superrepo-root
# runs cannot see.  Under the superrepo, its pytest.ini owns configuration
# and auto-marks these tests jax + small; the explicit in-file markers keep
# standalone runs warning-free and addressable.
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
markers = [
  "small: fast default-tier test (superrepo convention)",
  "medium: mid-cost test (superrepo convention)",
  "large: real time-march / simulation test; deselected by default, enable with --run-large (>5 min individually is large)",
  "regression: end-state march asserted against blessed baselines in tests/goldens",
  "jax: requires the jax stack (auto-applied by the superrepo conftest)",
]
